// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create board should return a board with pieces in their location 1`] = `
Array [
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "K",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
]
`;

exports[`create board should return an empty board when no pieces are passed 1`] = `
Array [
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
]
`;
